<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Stu_ID" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Name" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Tel" />

    <Button
        android:id="@+id/btndelete"
        android:layout_width="138dp"
        android:layout_height="wrap_content"
        android:text="@string/delete" />

    <Button
        android:id="@+id/btnedit"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:text="@string/savechange" />

</LinearLayout>
